--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -14,5 +14,6 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.7" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.7" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.7" />
     </ItemGroup>
 </Project>
