Add EnumsNET and property options

--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -16,5 +16,6 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.7" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.7" />
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0.13" />
+        <PackageReference Include="Enums.NET" Version="4.0.2" />
     </ItemGroup>
 </Project>
