--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.6" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
         <PackageReference Include="Enums.NET" Version="4.0.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     </ItemGroup>
 </Project>
