--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -10,8 +10,7 @@
         <None Remove=".gitignore"/>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.7" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.7" />
+        <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.2.1" />
         <PackageReference Include="Avalonia" Version="11.0.9" />
         <PackageReference Include="Avalonia.Desktop" Version="11.0.9" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
