--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -24,5 +24,6 @@
         <PackageReference Include="Enums.NET" Version="4.0.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+        <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="13.6.0" />
     </ItemGroup>
 </Project>
