Add `black.dds` file dependency for `_testCrunch` in ExternalDependencyManager.cs.

--- a/SourceEngineTextureTool/SourceEngineTextureTool.csproj
+++ b/SourceEngineTextureTool/SourceEngineTextureTool.csproj
@@ -8,6 +8,9 @@
     <ItemGroup>
         <AvaloniaResource Include="Assets\**"/>
         <None Remove=".gitignore"/>
+        <None Update="black.dds">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.2.1" />
